# BitmapPlusPlus-ruby

./: .gitattributes  .gitignore  CHANGELOG.md  Gemfile  LICENSE  README.md  Rakefile  bitmap-plus-plus.gemspec  bitmap_plus_plus.gemspec  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
docs/: .pages  about-rice.md  examples.md  index.md  installation.md  rice-doc.yaml  rice-guide.md  usage.md
docs/api/: .pages
docs/api/Bmp/: .pages  Bitmap.md  BitmapHeader.md  Exception.md  Pixel.md  index.md
docs/api/Rice/: .pages  Arg.md  Buffer≺Rice꞉꞉detail꞉꞉ParameterAbstract∗≻.md  Buffer≺char≻.md  ModuleRegistry.md  Native.md  NativeKind.md  NativeRegistry.md  Parameter.md  Pointer≺Rice꞉꞉detail꞉꞉ParameterAbstract∗≻.md  Pointer≺char≻.md  Reference≺char≻.md  Reference≺int≻.md  Reference≺unsigned Int64≻.md  Registries.md  TypeRegistry.md  index.md
docs/api/Std/: .pages  Exception.md  RuntimeError.md  Vector≺Rice꞉꞉detail꞉꞉ParameterAbstract const∗≻.md  index.md
docs/api/Std/Filesystem/: .pages  Path.md  index.md
examples/: draw_primitives.rb  julia.rb  mandelbrot.rb  random_colors.rb  transformations.rb
ext/: BitmapPlusPlus-rb.cpp  BitmapPlusPlus-rb.hpp  BitmapPlusPlus.hpp  CMakeLists.txt  CMakePresets.json
lib/: bitmap-plus-plus.rb  bitmap_plus_plus.rb
lib/bitmap-plus-plus/: version.rb
sig/Bmp/: Bitmap.rbs  BitmapHeader.rbs  Exception.rbs  Pixel.rbs
sig/Rice/: Arg.rbs  Buffer≺Rice꞉꞉detail꞉꞉ParameterAbstract∗≻.rbs  Buffer≺char≻.rbs  ModuleRegistry.rbs  Native.rbs  NativeKind.rbs  NativeRegistry.rbs  Parameter.rbs  Pointer≺Rice꞉꞉detail꞉꞉ParameterAbstract∗≻.rbs  Pointer≺char≻.rbs  Reference≺char≻.rbs  Reference≺int≻.rbs  Reference≺unsigned Int64≻.rbs  Registries.rbs  TypeRegistry.rbs
sig/Std/: Exception.rbs  RuntimeError.rbs  Vector≺Rice꞉꞉detail꞉꞉ParameterAbstract const∗≻.rbs
sig/Std/Filesystem/: Path.rbs
test/: bitmap_test.rb  draw_primitives_test.rb  file_io_test.rb  helper.rb  pixel_test.rb  transformations_test.rb
